test/configCases/errors/exception-in-chunk-renderer/errors.js
"use strict";

module.exports = [[/Test exception/]];
